--- a/app/src/main/res/layout/workday_list_layout.xml
+++ b/app/src/main/res/layout/workday_list_layout.xml
@@ -13,12 +13,19 @@
 	</ListView>
 
     <Button
-        android:id="@id/android:empty"
+        android:id="@+id/addNewItemButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="@string/add_new_workday_button_text" />
 
+    <Button
+        android:id="@+id/saveDayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:layout_above="@+id/addNewItemButton"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
-<!-- From: file:/C:/Users/DoctorMondo/AndroidStudioProjects/CommuteWatcher1/app/src/main/res/layout/workweek_list_layout.xml -->
