--- a/app/src/main/res/menu/commute_list_item_context.xml
+++ b/app/src/main/res/menu/commute_list_item_context.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/menu_item_delete_commute"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/delete_this_commute"/>
+        android:title="@string/clear_day"/>
 
 </menu>
