--- a/app/src/main/res/layout/list_item_workday.xml
+++ b/app/src/main/res/layout/list_item_workday.xml
@@ -1,46 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:clickable="true"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
+    <TextView
 
-    
-    <CheckBox
-        android:id="@+id/workday_list_item_activeCheckBox"
+        android:id="@+id/commute_start_point_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:text="@string/active"
-        android:enabled="true"
-        android:padding="4dp">
-        
-    </CheckBox>
+        android:textStyle="bold"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="2dp"
+        android:text="StartPoint"/>
 
+    <GridLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+
+            android:id="@+id/commute_start_time_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
+            android:paddingRight="4dp"
+            android:paddingEnd="4dp"
+            android:text="Start Time"/>
+
+        <CheckBox
+            android:id="@+id/commute_item_activeCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="@string/active"
+            android:enabled="true"
+            android:layout_gravity="end">
+
+        </CheckBox>
+    </GridLayout>
     <TextView
 
-        android:id="@+id/workday_starttime_TextView"
-        android:layout_width="match_parent"
+        android:id="@+id/commute_end_point_textview"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/workday_list_item_activeCheckBox"
         android:textStyle="bold"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:text="Start Time"/>
-
-    <TextView
-        android:id="@+id/workday_endpoint_timeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/workday_list_item_activeCheckBox"
-        android:layout_below="@id/workday_starttime_TextView"
-        android:textStyle="bold"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:padding="4dp"
-        android:text="Destination"/>
-
-    
-
-</RelativeLayout>
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="2dp"
+        android:text="End point"/>
+</LinearLayout>
