--- a/app/src/main/res/layout/workweeklayout_nonlist.xml
+++ b/app/src/main/res/layout/workweeklayout_nonlist.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:drawable/dialog_holo_light_frame"
+    >
+
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:paddingEnd="2dp"
     android:paddingRight="2dp">
 
     <LinearLayout
-        android:id="@+id/Su_layout"
+        android:id="@+id/su_layout"
         android:clickable="true"
         android:layout_width="match_parent"
         android:paddingTop="4dp"
@@ -16,7 +25,7 @@
         android:layout_height="wrap_content">
     <TextView
 
-        android:id="@+id/Su_day_of_week"
+        android:id="@+id/su_day_of_week"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
@@ -31,7 +40,7 @@
         android:layout_height="wrap_content">
     <TextView
 
-        android:id="@+id/Su_workday_starttime_TextView"
+        android:id="@+id/su_trips_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
@@ -42,7 +51,7 @@
         android:text="Start Time"/>
 
     <CheckBox
-        android:id="@+id/Su_workday_list_item_activeCheckBox"
+        android:id="@+id/su_workday_list_item_activeCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"
@@ -53,21 +62,11 @@
 
     </CheckBox>
     </GridLayout>
-    <TextView
-        android:id="@+id/Su_workday_endpoint_timeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:paddingLeft="4dp"
-        android:paddingStart="4dp"
-        android:paddingRight="4dp"
-        android:paddingEnd="4dp"
-        android:padding="4dp"
-        android:text="Destination"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/Mo_layout"
+        android:id="@+id/mo_layout"
         android:clickable="true"
         android:layout_width="match_parent"
         android:elevation="4dp"
@@ -77,7 +76,7 @@
         android:layout_height="wrap_content">
         <TextView
 
-            android:id="@+id/Mo_day_of_week"
+            android:id="@+id/mo_day_of_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -92,7 +91,7 @@
             android:layout_height="wrap_content">
             <TextView
 
-                android:id="@+id/Mo_workday_starttime_TextView"
+                android:id="@+id/mo_trips_TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -103,7 +102,7 @@
                 android:text="Start Time"/>
 
             <CheckBox
-                android:id="@+id/Mo_workday_list_item_activeCheckBox"
+                android:id="@+id/mo_workday_list_item_activeCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
@@ -114,20 +113,11 @@
 
             </CheckBox>
         </GridLayout>
-        <TextView
-            android:id="@+id/Mo_workday_endpoint_timeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
-            android:text="Destination"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/Tu_layout"
+        android:id="@+id/tu_layout"
         android:clickable="true"
         android:layout_width="match_parent"
         android:elevation="4dp"
@@ -137,7 +127,7 @@
         android:layout_height="wrap_content">
         <TextView
 
-            android:id="@+id/Tu_day_of_week"
+            android:id="@+id/tu_day_of_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -152,7 +142,7 @@
             android:layout_height="wrap_content">
             <TextView
 
-                android:id="@+id/Tu_workday_starttime_TextView"
+                android:id="@+id/tu_trips_TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -163,7 +153,7 @@
                 android:text="Start Time"/>
 
             <CheckBox
-                android:id="@+id/Tu_workday_list_item_activeCheckBox"
+                android:id="@+id/tu_workday_list_item_activeCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
@@ -174,20 +164,11 @@
 
             </CheckBox>
         </GridLayout>
-        <TextView
-            android:id="@+id/Tu_workday_endpoint_timeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
-            android:text="Destination"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/We_layout"
+        android:id="@+id/we_layout"
         android:clickable="true"
         android:layout_width="match_parent"
         android:elevation="4dp"
@@ -197,7 +178,7 @@
         android:layout_height="wrap_content">
         <TextView
 
-            android:id="@+id/We_day_of_week"
+            android:id="@+id/we_day_of_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -212,7 +193,7 @@
             android:layout_height="wrap_content">
             <TextView
 
-                android:id="@+id/We_workday_starttime_TextView"
+                android:id="@+id/we_trips_TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -223,7 +204,7 @@
                 android:text="Start Time"/>
 
             <CheckBox
-                android:id="@+id/We_workday_list_item_activeCheckBox"
+                android:id="@+id/we_workday_list_item_activeCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
@@ -234,20 +215,11 @@
 
             </CheckBox>
         </GridLayout>
-        <TextView
-            android:id="@+id/We_workday_endpoint_timeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
-            android:text="Destination"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/Th_layout"
+        android:id="@+id/th_layout"
         android:clickable="true"
         android:layout_width="match_parent"
         android:elevation="4dp"
@@ -257,7 +229,7 @@
         android:layout_height="wrap_content">
         <TextView
 
-            android:id="@+id/Th_day_of_week"
+            android:id="@+id/th_day_of_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -272,7 +244,7 @@
             android:layout_height="wrap_content">
             <TextView
 
-                android:id="@+id/Th_workday_starttime_TextView"
+                android:id="@+id/th_trips_TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -283,7 +255,7 @@
                 android:text="Start Time"/>
 
             <CheckBox
-                android:id="@+id/Th_workday_list_item_activeCheckBox"
+                android:id="@+id/th_workday_list_item_activeCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
@@ -294,20 +266,11 @@
 
             </CheckBox>
         </GridLayout>
-        <TextView
-            android:id="@+id/Th_workday_endpoint_timeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
-            android:text="Destination"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/Fr_layout"
+        android:id="@+id/fr_layout"
         android:clickable="true"
         android:layout_width="match_parent"
         android:elevation="4dp"
@@ -317,7 +280,7 @@
         android:layout_height="wrap_content">
         <TextView
 
-            android:id="@+id/Fr_day_of_week"
+            android:id="@+id/fr_day_of_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -332,7 +295,7 @@
             android:layout_height="wrap_content">
             <TextView
 
-                android:id="@+id/Fr_workday_starttime_TextView"
+                android:id="@+id/fr_trips_TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -343,7 +306,7 @@
                 android:text="Start Time"/>
 
             <CheckBox
-                android:id="@+id/Fr_workday_list_item_activeCheckBox"
+                android:id="@+id/fr_workday_list_item_activeCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
@@ -354,20 +317,11 @@
 
             </CheckBox>
         </GridLayout>
-        <TextView
-            android:id="@+id/Fr_workday_endpoint_timeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
-            android:text="Destination"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/Sa_layout"
+        android:id="@+id/sa_layout"
         android:clickable="true"
         android:layout_width="match_parent"
         android:elevation="4dp"
@@ -377,7 +331,7 @@
         android:layout_height="wrap_content">
         <TextView
 
-            android:id="@+id/Sa_day_of_week"
+            android:id="@+id/sa_day_of_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -392,7 +346,7 @@
             android:layout_height="wrap_content">
             <TextView
 
-                android:id="@+id/Sa_workday_starttime_TextView"
+                android:id="@+id/sa_trips_TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -403,7 +357,7 @@
                 android:text="Start Time"/>
 
             <CheckBox
-                android:id="@+id/Sa_workday_list_item_activeCheckBox"
+                android:id="@+id/sa_workday_list_item_activeCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:focusable="false"
@@ -414,17 +368,8 @@
 
             </CheckBox>
         </GridLayout>
-        <TextView
-            android:id="@+id/Sa_workday_endpoint_timeTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
 
-            android:text="Destination"/>
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
