--- a/app/src/main/res/layout/workday_list_layout.xml
+++ b/app/src/main/res/layout/workday_list_layout.xml
@@ -4,10 +4,11 @@
     android:theme="@style/Theme.Bacon"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="?attr/actionBarSize"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
-    xmlns:android.support.design="http://schemas.android.com/tools">
+
+    >
     
     <ListView
     android:id="@id/android:list"
