--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
         <color name="theme_primary_dark">#3f51b5</color>
         <color name="theme_accent">#d84315</color>#d84315
         <color name="ltgray">#ffe0e0e0</color>
+        <color name="white">#ffffff</color>
 
 
 </resources>
