--- a/app/src/main/res/layout/workday_list_layout.xml
+++ b/app/src/main/res/layout/workday_list_layout.xml
@@ -14,7 +14,7 @@
     android:id="@id/android:list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/ltgray"
+    android:background="@android:color/white"
 
     >
 	</ListView>
