--- a/app/src/main/res/layout/list_item_workday.xml
+++ b/app/src/main/res/layout/list_item_workday.xml
@@ -25,7 +25,7 @@
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingBottom="2dp"
-        android:text="StartPoint"/>
+        android:text="@string/start_point"/>
 
     <CheckBox
         android:id="@+id/commute_item_activeCheckBox"
@@ -54,7 +54,7 @@
             android:paddingStart="4dp"
             android:paddingRight="4dp"
             android:paddingEnd="4dp"
-            android:text="Start Time"
+            android:text="@string/start_time"
             android:paddingBottom="4dp" />
 
 
@@ -68,7 +68,7 @@
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingBottom="2dp"
-        android:text="End point"/>
+        android:text="@string/end_point"/>
 
 
 </LinearLayout>
