--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -18,7 +18,7 @@
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingBottom="2dp"
-        android:text="@string/next_commute_label"/>
+        android:text="@string/fetching_commute"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -34,7 +34,7 @@
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
             android:paddingBottom="2dp"
-            android:text="@string/start_point"/>
+            android:text=""/>
 
 
 
@@ -49,7 +49,7 @@
         android:paddingStart="4dp"
         android:paddingRight="4dp"
         android:paddingEnd="4dp"
-        android:text="@string/start_time"
+        android:text=""
         android:paddingBottom="4dp" />
 
 
@@ -63,7 +63,7 @@
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingBottom="2dp"
-        android:text="@string/end_point"/>
+        android:text=""/>
 
 
 </LinearLayout>
