--- a/app/src/main/res/layout/list_item_workday.xml
+++ b/app/src/main/res/layout/list_item_workday.xml
@@ -15,13 +15,15 @@
         android:orientation="horizontal"
         android:backgroundTint="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginRight="4dp">
     <TextView
 
         android:id="@+id/commute_start_point_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:maxWidth="200dp"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingBottom="2dp"
@@ -68,6 +70,7 @@
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingBottom="2dp"
+        android:maxWidth="200dp"
         android:text="@string/end_point"/>
 
 
