--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/done"
+        android:contentDescription="@string/done"
         android:layout_marginRight="25dp"
         android:layout_marginEnd="25dp"
         android:layout_below="@+id/userWorkDateTimeTextView"
@@ -55,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cancel"
+        android:contentDescription="@string/cancel"
         android:layout_alignTop="@+id/saveCommuteInfoButton"
         android:layout_alignEnd="@+id/enterWorkDateTimeButton" />
 
@@ -79,6 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/set_to_work_time"
+        android:contentDescription="@string/set_to_work_time"
         android:layout_alignTop="@+id/homeAddressTextView"
 
 
