--- a/app/src/main/res/layout/workweek_empty_layout.xml
+++ b/app/src/main/res/layout/workweek_empty_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:contentDescription="@string/add_commute_short"
         android:text="@string/add_new_workday_button_text" />
 
 </RelativeLayout>
